--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,9 @@
                             <a class="nav-link scroll-soft" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link scroll-soft" href="#blog">Blog</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link scroll-soft" href="#contact">Let's work!</a>
                         </li>
                     </ul>
@@ -195,26 +198,17 @@
             <h2 class="middle-heading">The portfolio</h2>
             <h6>Come on! Take a glance of the last projects I had worked on :]</h6>
 
-            <div class="row projects-gallery">
-                <div class="col-lg-5 col-md-8 project">
-                    <div class="card mb-4 box-shadow">
-                        <img class="card-img-top img-project" alt="Dino Game - JS"
-                            style="height: 225px; width: 100%; display: block;" src="img/project-dinogame.png"
-                            data-holder-rendered="true">
-                        <div class="card-body">
-                            <p class="card-text"> This game is 100% inspired on the Google's Chrome No Internet connection error 
-                                Dino T-Rex Runner game. This one of course, is <span>purple✨</span><br />
-                                You can watch the demo above 
-                                or play it <a href="https://melissahuertadev.github.io/dino-game/">here</a>.
-                            </p>
-                            <div class="category">
-                                <span class="badge badge-light">Game</span>
-                                <span class="badge badge-warning">JS</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id="project-gallery" class="row projects-gallery"></div>
+    </section>
+
+    <section id="blog" class="container-fluid">
+        <h2 class="middle-heading">Blog</h2>
+            <h6>My recent posts 📝</h6>
+            <div class="row" id="mediumPosts"></div>
+            <nav>
+                <ul class="pagination justify-content-center" id="pagin"></ul>
+            </nav>
+            <a class="btn btn-brown" href="https://medium.com/@melissahuertadev" target="_blank" role="button">View all posts</a>            
     </section>
 
     <section id="contact" class="container-fluid">
@@ -294,6 +288,7 @@
         crossorigin="anonymous"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/getData.js"></script>
 </body>
 
 </html>
