update socials from json file

--- a/public/index.html
+++ b/public/index.html
@@ -72,19 +72,8 @@
                     <h1 class="big-heading">Melissa Huerta</h1>
                     <h2 class="big-desc">Software Developer</h2>
                     <p>Specialized in turning ideas into apps. 🚀</p>
-                    <div class="socials">
-                        <a target=”_blank” href="https://www.linkedin.com/in/melissahuertadev/">
-                            <i class="fa-brands fa-linkedin"></i>
-                        </a>
-                        <a target=”_blank” href="https://github.com/melissahuertadev">
-                            <i class="fa-brands fa-github"></i>
-                        </a>
-                        <a target=”_blank” href="https://www.youtube.com/c/codeafeliz">
-                            <i class="fa-brands fa-youtube"></i>
-                        </a>
-                        <a target=”_blank” href="https://medium.com/@melissahuertadev">
-                            <i class="fa-brands fa-medium"></i>
-                        </a>
+                    <div class="socials socials-links">
+                        <!-- Here goes the socials links -->
                     </div>
                     <a href="#contact" class="scroll-soft btn btn-brown btn-lg download-button">
                         Let's make an app!</a>
@@ -97,45 +86,8 @@
     <section class="workflow container-fluid" id="workflow">
         <h2 class="middle-heading">Workflow</h2>
         <h6>Know more how I do things :]</h6>
-        <div class="row">
-            <div class="stage-box col-lg-4">
-                <img src="./icons/astronaut.png" width="60px">
-                <h3 class="stage-title">Aware</h3>
-                <p>Hellooo! The first step is to know you and your current situation, to be <span>aware</span>
-                    of your or your business's problems and needs, so together we can look for
-                    the best solution.</p>
-            </div>
-            <div class="stage-box col-lg-4">
-                <img src="./icons/happy.png" width="60px">
-                <h3 class="stage-title">Land</h3>
-                <p>Once we have defined the problem or need, I'll start brainstorming
-                    possible solutions and of course if you have already something in mind,
-                    that's beyond awesome!
-                    So we can finally <span>land the idea</span> that will
-                    be turned into app.</p>
-            </div>
-            <div class="stage-box col-lg-4">
-                <img src="./icons/laptop.png" width="60px">
-                <h3 class="stage-title">Prototype</h3>
-                <p>Great! Now we have our idea landed. I'll share with you some wireframes
-                    and after we choose the one that suits you best, it's time for me to show you <span>high fidelity
-                        prototype</span>
-                    of the app.</p>
-            </div>
-            <div class="stage-box col-lg-4">
-                <img src="./icons/coding-2.png" width="60px">
-                <h3 class="stage-title">Develop</h3>
-                <p>We are almost there! This step is the most fun for me, since I'll be
-                    <span>developing</span> your app and of course you are a huge part of it
-                    since I'll need your constant feedback.
-                </p>
-            </div>
-            <div class="stage-box col-lg-4">
-                <img src="./icons/car.png" width="60px">
-                <h3 class="stage-title">Launch</h3>
-                <p>We did it! <br> We make your app and in this final step, we will be <span>launching</span>
-                    the app to the woooorld! It's time for them to see it.</p>
-            </div>
+        <div id="workflow-steps" class="row">
+            <!-- Here goes the workflow steps -->
         </div>
     </section>
 
@@ -198,7 +150,9 @@
             <h2 class="middle-heading">The portfolio</h2>
             <h6>Come on! Take a glance of the last projects I had worked on :]</h6>
 
-            <div id="project-gallery" class="row projects-gallery"></div>
+            <div id="project-gallery" class="row projects-gallery">
+                <!-- Here goes the portfolio items -->
+            </div>
     </section>
 
     <section id="blog" class="container-fluid">
@@ -259,18 +213,9 @@
 
     <!-- Footer -->
     <footer id="footer" class="container-fluid">
-        <a target=”_blank” href="https://www.linkedin.com/in/melissahuertadev/">
-            <i class="fa-brands fa-linkedin"></i>
-        </a>
-        <a target=”_blank” href="https://github.com/melissahuertadev">
-            <i class="fa-brands fa-github"></i>
-        </a>
-        <a target=”_blank” href="https://www.youtube.com/c/codeafeliz">
-            <i class="fa-brands fa-youtube"></i>
-        </a>
-        <a target=”_blank” href="https://medium.com/@melissahuertadev">
-            <i class="fa-brands fa-medium"></i>
-        </a>
+        <div class="socials-links">
+            <!-- Here goes the socials links -->
+        </div>
         <p class="footer-copy">
             © Copyright 2022 Melissa Huerta Dev <br>
             Made with ❤️ in Perú
